--- a/application/index/view/index/detail.html
+++ b/application/index/view/index/detail.html
@@ -106,7 +106,7 @@
         <div class="container detail_container">
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
-                <li><a href="/">首页</a></li>
+                <li><a href="/web?&company_id={$company_id}&company_type={$company_type}">首页</a></li>
                 {if !empty($navbar_menu)}
                 <li><a href="#">{$navbar_menu}</a></li>
                 {/if}
