--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -98,6 +98,8 @@
         .result_div .result_ul{height: 160px;overflow-x: hidden;overflow-y: scroll;}
         .result_div li:hover{background:var(--primary);color:#fff;cursor:pointer;}
 
+        .w70{width:300px;}
+
         /* 动画 */
         @keyframes fadeIn {
             from {opacity: 0;transform: translateY(10px);}
