--- a/application/index/view/index/shop_backend/shop_copyright.html
+++ b/application/index/view/index/shop_backend/shop_copyright.html
@@ -137,7 +137,7 @@
                             // let currentUrl = new URL(parent.location.href);
                             // currentUrl.searchParams.set('tab', 'carousel');
                             // parent.history.pushState({}, '', currentUrl.toString());
-                            parent.location.reload();
+                            window.location.reload();
                         }
                     });
                 },
