--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -100,7 +100,9 @@
 
         .have_specs_div select{width:150px;}
         .have_specs_div input{width:150px;}
-        /*.w70{width:300px;}*/
+
+        .fees_table select{width:150px;}
+        .fees_table input{width:150px;}
 
         /* 动画 */
         @keyframes fadeIn {
