--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -453,7 +453,7 @@
                 </div>
                 <div class="layui-tab-item {if $page_type==3}layui-show{/if}">
                     <!--其他费用start-->
-                    <div class="fees_table_div">
+                    <div class="fees_table_div" style="min-height: 300px;">
                         <table class="layui-table fees_table">
                             <thead>
                             <th>费用名称</th>
@@ -506,7 +506,7 @@
                                                             </select>
                                                         </div>
                                                         <input type="number" class="layui-input w100" name="fees_trigger2_num[]" value="" placeholder="输入数值">
-                                                        <div class="layui-input w70" style="line-height: 38px;padding-left:0;">触发收费</div>
+                                                        <div class="layui-input w70" style="line-height: 38px;padding-left:0;white-space:nowrap;">触发收费</div>
                                                     </div>
                                                 </div>
                                                 <!--型号触发-->
