--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -107,6 +107,18 @@
         .spec_table select{width:150px;}
         .spec_table input{width:150px;}
 
+        .reduction_div select{width:150px;}
+        .reduction_div input{width:150px;}
+
+        .gift_div select{width:150px;}
+        .gift_div input{width:150px;}
+
+        .noinclude_table select{width:150px;}
+        .noinclude_table input{width:150px;}
+
+        .potential_table select{width:150px;}
+        .potential_table input{width:150px;}
+
         /* 动画 */
         @keyframes fadeIn {
             from {opacity: 0;transform: translateY(10px);}
