--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -661,7 +661,7 @@
                 <div class="layui-tab-item {if $page_type==4}layui-show{/if}">
                     <!--价格说明start-->
                     <div class="layui-form-item">
-                        <div class="layui-input-block" style="margin-left:0px !important;">
+                        <div class="layui-input-block" style="margin-left:0px !important;overflow-y:auto;">
 
                             <fieldset class="layui-elem-field">
                                 <legend>销售优惠-减免</legend>
