--- a/application/index/view/index/shop_backend/website_shop.html
+++ b/application/index/view/index/shop_backend/website_shop.html
@@ -401,6 +401,11 @@
                                 <i class="fas fa-store"></i> 规则管理
                             </div>
                         </li>
+                        <li class="menu-item billinfo" data-target="shop-info" onclick="openWindow('billinfo')">
+                            <div class="menu-item-content">
+                                <i class="fas fa-store"></i> 账单信息
+                            </div>
+                        </li>
 <!--                        <li class="menu-item line_setting" data-target="shop-info" onclick="openWindow('line_setting')">-->
 <!--                            <div class="menu-item-content">-->
 <!--                                <i class="fas fa-store"></i> 线路管理-->
