调整提醒配置页

--- a/application/index/view/index/setting.html
+++ b/application/index/view/index/setting.html
@@ -1,4 +1,4 @@
-
+{include file="common/header2"}
 
 <style>
     * {margin: 0;padding: 0;box-sizing: border-box;font-family: 'PingFang SC', 'Microsoft YaHei', sans-serif;}
