--- a/application/index/view/index/shop_backend/website_shop.html
+++ b/application/index/view/index/shop_backend/website_shop.html
@@ -393,17 +393,17 @@
                         </li>
                         <li class="menu-item warehouse_manage" data-target="shop-info" onclick="openWindow('warehouse_manage')">
                             <div class="menu-item-content">
-                                <i class="fas fa-store"></i> 仓库管理
+                                <i class="fas fa-warehouse"></i> 仓库管理
                             </div>
                         </li>
                         <li class="menu-item description_manage" data-target="shop-info" onclick="openWindow('description_manage')">
                             <div class="menu-item-content">
-                                <i class="fas fa-store"></i> 规则管理
+                                <i class="fas fa-ruler"></i> 规则管理
                             </div>
                         </li>
                         <li class="menu-item billinfo" data-target="shop-info" onclick="openWindow('billinfo')">
                             <div class="menu-item-content">
-                                <i class="fas fa-store"></i> 账单信息
+                                <i class="fas fa-money-bill"></i> 账单信息
                             </div>
                         </li>
 <!--                        <li class="menu-item line_setting" data-target="shop-info" onclick="openWindow('line_setting')">-->
