--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -244,7 +244,7 @@
                             <div class="specs_div">
                                 <!--无规格型号-->
                                 <div class="no_specs_div">
-                                    <table class="layui-table">
+                                    <table class="layui-table" style="margin-bottom:100px;">
                                         <thead>
                                             <th>货号</th>
                                             <th>条码</th>
@@ -331,7 +331,7 @@
 
                                 <!--有规格型号-->
                                 <div class="have_specs_div" style="display: none;max-height:500px;min-height:400px;overflow-y:auto;">
-                                    <table class="layui-table">
+                                    <table class="layui-table" style="margin-bottom:100px;">
                                         <thead>
                                         <th class="specs_th_name">型号</th>
                                         <th>货号</th>
