调整页面样式

--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -64,7 +64,7 @@
         .disf{display: flex;align-items: center;}
         .layui-form-label{width: 100px;}
         .sel_div .layui-form-selected dl{width: 100%;}
-        .w70{width:300px;}
+        .w70{width:120px !important;}
 
         /*商品价格*/
         .no_specs_div,.have_specs_div{overflow-x:auto;}
@@ -293,7 +293,7 @@
                                                             </div>
                                                         </td>
                                                         <td class="td_width">
-                                                            <input type="number" name="nospecs[price][]" value="" class="layui-input" placeholder="区间金额">
+                                                            <input type="number" name="nospecs[price][]" value="" class="layui-input w70" placeholder="区间金额">
                                                         </td>
                                                         <td style="text-align:center;">
                                                             <div class="layui-btn layui-btn-md layui-btn-normal addbtn" onclick="add_interval2(this)">+</div>
