调整页面样式

--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -112,7 +112,7 @@
         .reduction_div input{width:150px;}
 
         .gift_div select{width:150px;}
-        .gift_div input{width:150px;}
+        /*.gift_div input{width:150px;}*/
 
         .noinclude_table select{width:150px;}
         .noinclude_table input{width:150px;}
