--- a/application/index/view/index/shop_backend/website_shop.html
+++ b/application/index/view/index/shop_backend/website_shop.html
@@ -568,12 +568,12 @@
                         </li>
                         <li class="menu-item procurement_manage" data-target="procurement-manage" onclick="openWindow('procurement_manage')" style="border-top:1px solid #fff;">
                             <div class="menu-item-content">
-                                <i class="fas fa-info-circle"></i> 采购管理
+                                <i class="fas fa-procedures"></i> 采购管理
                             </div>
                         </li>
                         <li class="menu-item procurement_manage" data-target="procurement-manage" onclick="openWindow('transfer_manage')" style="border-top:1px solid #fff;">
                             <div class="menu-item-content">
-                                <i class="fas fa-info-circle"></i> 调拨管理
+                                <i class="fas fa-truck-fast"></i> 调拨管理
                             </div>
                         </li>
 
